sip/uri_parse.go

//line uri_parse.rl:1
package sip

import (
  "bytes"
  "errors"
  "fmt"
)


//line uri_parse.rl:10

//line uri_parse.go:15
const uri_start int = 1
const uri_first_final int = 45
const uri_error int = 0

const uri_en_uriSansUser int = 27
const uri_en_uriWithUser int = 1


//line uri_parse.rl:11

// ParseURI turns a a SIP URI into a data structure.
func ParseURI(s string) (uri *URI, err error) {
  if s == "" {
    return nil, errors.New("Empty URI")
  }
  return ParseURIBytes([]byte(s))
}

// ParseURI turns a a SIP URI byte slice into a data structure.
func ParseURIBytes(data []byte) (uri *URI, err error) {
  if data == nil {
    return nil, nil
  }
  uri = new(URI)
  cs := 0
  p := 0
  pe := len(data)
  eof := len(data)
  buf := make([]byte, len(data))
  amt := 0
  var b1, b2 string
  var hex byte

  
//line uri_parse.rl:147


  
//line uri_parse.go:54
	{
	cs = uri_start
	}

//line uri_parse.rl:150
  if bytes.IndexByte(data, '@') == -1 {
    cs = uri_en_uriSansUser;
  } else {
    cs = uri_en_uriWithUser;
  }
  
//line uri_parse.go:66
	{
	if p == pe {
		goto _test_eof
	}
	switch cs {
	case 1:
		goto st_case_1
	case 0:
		goto st_case_0
	case 2:
		goto st_case_2
	case 3:
		goto st_case_3
	case 4:
		goto st_case_4
	case 5:
		goto st_case_5
	case 6:
		goto st_case_6
	case 7:
		goto st_case_7
	case 8:
		goto st_case_8
	case 9:
		goto st_case_9
	case 10:
		goto st_case_10
	case 11:
		goto st_case_11
	case 45:
		goto st_case_45
	case 46:
		goto st_case_46
	case 12:
		goto st_case_12
	case 47:
		goto st_case_47
	case 13:
		goto st_case_13
	case 14:
		goto st_case_14
	case 15:
		goto st_case_15
	case 48:
		goto st_case_48
	case 16:
		goto st_case_16
	case 17:
		goto st_case_17
	case 18:
		goto st_case_18
	case 49:
		goto st_case_49
	case 50:
		goto st_case_50
	case 19:
		goto st_case_19
	case 20:
		goto st_case_20
	case 21:
		goto st_case_21
	case 51:
		goto st_case_51
	case 22:
		goto st_case_22
	case 23:
		goto st_case_23
	case 24:
		goto st_case_24
	case 52:
		goto st_case_52
	case 25:
		goto st_case_25
	case 26:
		goto st_case_26
	case 53:
		goto st_case_53
	case 27:
		goto st_case_27
	case 28:
		goto st_case_28
	case 29:
		goto st_case_29
	case 54:
		goto st_case_54
	case 55:
		goto st_case_55
	case 30:
		goto st_case_30
	case 56:
		goto st_case_56
	case 31:
		goto st_case_31
	case 32:
		goto st_case_32
	case 33:
		goto st_case_33
	case 57:
		goto st_case_57
	case 34:
		goto st_case_34
	case 35:
		goto st_case_35
	case 36:
		goto st_case_36
	case 58:
		goto st_case_58
	case 59:
		goto st_case_59
	case 37:
		goto st_case_37
	case 38:
		goto st_case_38
	case 39:
		goto st_case_39
	case 60:
		goto st_case_60
	case 40:
		goto st_case_40
	case 41:
		goto st_case_41
	case 42:
		goto st_case_42
	case 61:
		goto st_case_61
	case 43:
		goto st_case_43
	case 44:
		goto st_case_44
	case 62:
		goto st_case_62
	}
	goto st_out
	st1:
		if p++; p == pe {
			goto _test_eof1
		}
	st_case_1:
		if data[p] == 32 {
			goto st1
		}
		switch {
		case data[p] < 65:
			if 9 <= data[p] && data[p] <= 13 {
				goto st1
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto tr2
			}
		default:
			goto tr2
		}
		goto st0
st_case_0:
	st0:
		cs = 0
		goto _out
tr2:
//line uri_parse.rl:36

      amt = 0
    
//line uri_parse.rl:85

      if 'A' <= data[p] && data[p] <= 'Z' {
        buf[amt] = data[p] + 0x20
      } else {
        buf[amt] = data[p]
      }
      amt++
    
	goto st2
tr3:
//line uri_parse.rl:85

      if 'A' <= data[p] && data[p] <= 'Z' {
        buf[amt] = data[p] + 0x20
      } else {
        buf[amt] = data[p]
      }
      amt++
    
	goto st2
	st2:
		if p++; p == pe {
			goto _test_eof2
		}
	st_case_2:
//line uri_parse.go:256
		switch data[p] {
		case 43:
			goto tr3
		case 58:
			goto tr4
		}
		switch {
		case data[p] < 48:
			if 45 <= data[p] && data[p] <= 46 {
				goto tr3
			}
		case data[p] > 57:
			switch {
			case data[p] > 90:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr3
				}
			case data[p] >= 65:
				goto tr3
			}
		default:
			goto tr3
		}
		goto st0
tr4:
//line uri_parse.rl:55

      uri.Scheme = string(buf[0:amt])
    
	goto st3
	st3:
		if p++; p == pe {
			goto _test_eof3
		}
	st_case_3:
//line uri_parse.go:292
		switch data[p] {
		case 33:
			goto tr5
		case 37:
			goto tr6
		case 59:
			goto tr5
		case 61:
			goto tr5
		case 63:
			goto tr5
		case 95:
			goto tr5
		case 126:
			goto tr5
		}
		switch {
		case data[p] < 65:
			if 36 <= data[p] && data[p] <= 57 {
				goto tr5
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto tr5
			}
		default:
			goto tr5
		}
		goto st0
tr5:
//line uri_parse.rl:36

      amt = 0
    
//line uri_parse.rl:40

      buf[amt] = data[p]
      amt++
    
	goto st4
tr7:
//line uri_parse.rl:40

      buf[amt] = data[p]
      amt++
    
	goto st4
tr12:
//line uri_parse.rl:49

      hex += unhex(data[p])
      buf[amt] = hex
      amt++
    
	goto st4
	st4:
		if p++; p == pe {
			goto _test_eof4
		}
	st_case_4:
//line uri_parse.go:353
		switch data[p] {
		case 33:
			goto tr7
		case 37:
			goto st5
		case 58:
			goto tr9
		case 61:
			goto tr7
		case 64:
			goto tr10
		case 95:
			goto tr7
		case 126:
			goto tr7
		}
		switch {
		case data[p] < 63:
			if 36 <= data[p] && data[p] <= 59 {
				goto tr7
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto tr7
			}
		default:
			goto tr7
		}
		goto st0
tr6:
//line uri_parse.rl:36

      amt = 0
    
	goto st5
	st5:
		if p++; p == pe {
			goto _test_eof5
		}
	st_case_5:
//line uri_parse.go:394
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr11
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto tr11
			}
		default:
			goto tr11
		}
		goto st0
tr11:
//line uri_parse.rl:45

      hex = unhex(data[p]) * 16
    
	goto st6
	st6:
		if p++; p == pe {
			goto _test_eof6
		}
	st_case_6:
//line uri_parse.go:419
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr12
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto tr12
			}
		default:
			goto tr12
		}
		goto st0
tr9:
//line uri_parse.rl:59

      uri.User = string(buf[0:amt])
    
	goto st7
	st7:
		if p++; p == pe {
			goto _test_eof7
		}
	st_case_7:
//line uri_parse.go:444
		switch data[p] {
		case 33:
			goto tr13
		case 37:
			goto tr14
		case 61:
			goto tr13
		case 95:
			goto tr13
		case 126:
			goto tr13
		}
		switch {
		case data[p] < 48:
			if 36 <= data[p] && data[p] <= 46 {
				goto tr13
			}
		case data[p] > 57:
			switch {
			case data[p] > 90:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr13
				}
			case data[p] >= 65:
				goto tr13
			}
		default:
			goto tr13
		}
		goto st0
tr13:
//line uri_parse.rl:36

      amt = 0
    
//line uri_parse.rl:40

      buf[amt] = data[p]
      amt++
    
	goto st8
tr15:
//line uri_parse.rl:40

      buf[amt] = data[p]
      amt++
    
	goto st8
tr19:
//line uri_parse.rl:49

      hex += unhex(data[p])
      buf[amt] = hex
      amt++
    
	goto st8
	st8:
		if p++; p == pe {
			goto _test_eof8
		}
	st_case_8:
//line uri_parse.go:506
		switch data[p] {
		case 33:
			goto tr15
		case 37:
			goto st9
		case 61:
			goto tr15
		case 64:
			goto tr17
		case 95:
			goto tr15
		case 126:
			goto tr15
		}
		switch {
		case data[p] < 48:
			if 36 <= data[p] && data[p] <= 46 {
				goto tr15
			}
		case data[p] > 57:
			switch {
			case data[p] > 90:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr15
				}
			case data[p] >= 65:
				goto tr15
			}
		default:
			goto tr15
		}
		goto st0
tr14:
//line uri_parse.rl:36

      amt = 0
    
	goto st9
	st9:
		if p++; p == pe {
			goto _test_eof9
		}
	st_case_9:
//line uri_parse.go:550
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr18
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto tr18
			}
		default:
			goto tr18
		}
		goto st0
tr18:
//line uri_parse.rl:45

      hex = unhex(data[p]) * 16
    
	goto st10
	st10:
		if p++; p == pe {
			goto _test_eof10
		}
	st_case_10:
//line uri_parse.go:575
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr19
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto tr19
			}
		default:
			goto tr19
		}
		goto st0
tr10:
//line uri_parse.rl:59

      uri.User = string(buf[0:amt])
    
	goto st11
tr17:
//line uri_parse.rl:63

      uri.Pass = string(buf[0:amt])
    
	goto st11
	st11:
		if p++; p == pe {
			goto _test_eof11
		}
	st_case_11:
//line uri_parse.go:606
		switch data[p] {
		case 43:
			goto tr20
		case 91:
			goto st25
		}
		switch {
		case data[p] < 48:
			if 45 <= data[p] && data[p] <= 46 {
				goto tr20
			}
		case data[p] > 57:
			switch {
			case data[p] > 90:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr20
				}
			case data[p] >= 65:
				goto tr20
			}
		default:
			goto tr20
		}
		goto st0
tr20:
//line uri_parse.rl:36

      amt = 0
    
//line uri_parse.rl:85

      if 'A' <= data[p] && data[p] <= 'Z' {
        buf[amt] = data[p] + 0x20
      } else {
        buf[amt] = data[p]
      }
      amt++
    
	goto st45
tr69:
//line uri_parse.rl:85

      if 'A' <= data[p] && data[p] <= 'Z' {
        buf[amt] = data[p] + 0x20
      } else {
        buf[amt] = data[p]
      }
      amt++
    
	goto st45
	st45:
		if p++; p == pe {
			goto _test_eof45
		}
	st_case_45:
//line uri_parse.go:662
		switch data[p] {
		case 32:
			goto tr68
		case 43:
			goto tr69
		case 58:
			goto tr70
		case 59:
			goto tr71
		case 63:
			goto tr72
		}
		switch {
		case data[p] < 48:
			switch {
			case data[p] > 13:
				if 45 <= data[p] && data[p] <= 46 {
					goto tr69
				}
			case data[p] >= 9:
				goto tr68
			}
		case data[p] > 57:
			switch {
			case data[p] > 90:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr69
				}
			case data[p] >= 65:
				goto tr69
			}
		default:
			goto tr69
		}
		goto st0
tr68:
//line uri_parse.rl:67

      uri.Host = string(buf[0:amt])
    
	goto st46
tr76:
//line uri_parse.rl:75

      b1 = string(buf[0:amt])
      amt = 0
    
//line uri_parse.rl:94

      if uri.Params == nil {
        uri.Params = Params{}
      }
      uri.Params[b1] = b2
    
	goto st46
tr82:
//line uri_parse.rl:80

      b2 = string(buf[0:amt])
      amt = 0
    
//line uri_parse.rl:94

      if uri.Params == nil {
        uri.Params = Params{}
      }
      uri.Params[b1] = b2
    
	goto st46
	st46:
		if p++; p == pe {
			goto _test_eof46
		}
	st_case_46:
//line uri_parse.go:737
		switch data[p] {
		case 32:
			goto st46
		case 59:
			goto st12
		case 63:
			goto st18
		}
		if 9 <= data[p] && data[p] <= 13 {
			goto st46
		}
		goto st0
tr71:
//line uri_parse.rl:67

      uri.Host = string(buf[0:amt])
    
	goto st12
tr79:
//line uri_parse.rl:75

      b1 = string(buf[0:amt])
      amt = 0
    
//line uri_parse.rl:94

      if uri.Params == nil {
        uri.Params = Params{}
      }
      uri.Params[b1] = b2
    
	goto st12
tr85:
//line uri_parse.rl:80

      b2 = string(buf[0:amt])
      amt = 0
    
//line uri_parse.rl:94

      if uri.Params == nil {
        uri.Params = Params{}
      }
      uri.Params[b1] = b2
    
	goto st12
	st12:
		if p++; p == pe {
			goto _test_eof12
		}
	st_case_12:
//line uri_parse.go:789
		switch data[p] {
		case 33:
			goto tr22
		case 37:
			goto tr23
		case 93:
			goto tr22
		case 95:
			goto tr22
		case 126:
			goto tr22
		}
		switch {
		case data[p] < 45:
			if 36 <= data[p] && data[p] <= 43 {
				goto tr22
			}
		case data[p] > 58:
			switch {
			case data[p] > 91:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr22
				}
			case data[p] >= 65:
				goto tr22
			}
		default:
			goto tr22
		}
		goto st0
tr77:
//line uri_parse.rl:85

      if 'A' <= data[p] && data[p] <= 'Z' {
        buf[amt] = data[p] + 0x20
      } else {
        buf[amt] = data[p]
      }
      amt++
    
	goto st47
tr25:
//line uri_parse.rl:49

      hex += unhex(data[p])
      buf[amt] = hex
      amt++
    
	goto st47
tr22:
//line uri_parse.rl:36

      amt = 0
    
//line uri_parse.rl:80

      b2 = string(buf[0:amt])
      amt = 0
    
//line uri_parse.rl:85

      if 'A' <= data[p] && data[p] <= 'Z' {
        buf[amt] = data[p] + 0x20
      } else {
        buf[amt] = data[p]
      }
      amt++
    
	goto st47
	st47:
		if p++; p == pe {
			goto _test_eof47
		}
	st_case_47:
//line uri_parse.go:864
		switch data[p] {
		case 32:
			goto tr76
		case 33:
			goto tr77
		case 37:
			goto st13
		case 59:
			goto tr79
		case 61:
			goto tr80
		case 63:
			goto tr81
		case 93:
			goto tr77
		case 95:
			goto tr77
		case 126:
			goto tr77
		}
		switch {
		case data[p] < 45:
			switch {
			case data[p] > 13:
				if 36 <= data[p] && data[p] <= 43 {
					goto tr77
				}
			case data[p] >= 9:
				goto tr76
			}
		case data[p] > 58:
			switch {
			case data[p] > 91:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr77
				}
			case data[p] >= 65:
				goto tr77
			}
		default:
			goto tr77
		}
		goto st0
tr23:
//line uri_parse.rl:36

      amt = 0
    
//line uri_parse.rl:80

      b2 = string(buf[0:amt])
      amt = 0
    
	goto st13
	st13:
		if p++; p == pe {
			goto _test_eof13
		}
	st_case_13:
//line uri_parse.go:924
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr24
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto tr24
			}
		default:
			goto tr24
		}
		goto st0
tr24:
//line uri_parse.rl:45

      hex = unhex(data[p]) * 16
    
	goto st14
	st14:
		if p++; p == pe {
			goto _test_eof14
		}
	st_case_14:
//line uri_parse.go:949
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr25
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto tr25
			}
		default:
			goto tr25
		}
		goto st0
tr80:
//line uri_parse.rl:75

      b1 = string(buf[0:amt])
      amt = 0
    
	goto st15
	st15:
		if p++; p == pe {
			goto _test_eof15
		}
	st_case_15:
//line uri_parse.go:975
		switch data[p] {
		case 33:
			goto tr26
		case 37:
			goto tr27
		case 93:
			goto tr26
		case 95:
			goto tr26
		case 126:
			goto tr26
		}
		switch {
		case data[p] < 45:
			if 36 <= data[p] && data[p] <= 43 {
				goto tr26
			}
		case data[p] > 58:
			switch {
			case data[p] > 91:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr26
				}
			case data[p] >= 65:
				goto tr26
			}
		default:
			goto tr26
		}
		goto st0
tr26:
//line uri_parse.rl:36

      amt = 0
    
//line uri_parse.rl:85

      if 'A' <= data[p] && data[p] <= 'Z' {
        buf[amt] = data[p] + 0x20
      } else {
        buf[amt] = data[p]
      }
      amt++
    
	goto st48
tr83:
//line uri_parse.rl:85

      if 'A' <= data[p] && data[p] <= 'Z' {
        buf[amt] = data[p] + 0x20
      } else {
        buf[amt] = data[p]
      }
      amt++
    
	goto st48
tr29:
//line uri_parse.rl:49

      hex += unhex(data[p])
      buf[amt] = hex
      amt++
    
	goto st48
	st48:
		if p++; p == pe {
			goto _test_eof48
		}
	st_case_48:
//line uri_parse.go:1045
		switch data[p] {
		case 32:
			goto tr82
		case 33:
			goto tr83
		case 37:
			goto st16
		case 59:
			goto tr85
		case 63:
			goto tr86
		case 93:
			goto tr83
		case 95:
			goto tr83
		case 126:
			goto tr83
		}
		switch {
		case data[p] < 45:
			switch {
			case data[p] > 13:
				if 36 <= data[p] && data[p] <= 43 {
					goto tr83
				}
			case data[p] >= 9:
				goto tr82
			}
		case data[p] > 58:
			switch {
			case data[p] > 91:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr83
				}
			case data[p] >= 65:
				goto tr83
			}
		default:
			goto tr83
		}
		goto st0
tr27:
//line uri_parse.rl:36

      amt = 0
    
	goto st16
	st16:
		if p++; p == pe {
			goto _test_eof16
		}
	st_case_16:
//line uri_parse.go:1098
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr28
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto tr28
			}
		default:
			goto tr28
		}
		goto st0
tr28:
//line uri_parse.rl:45

      hex = unhex(data[p]) * 16
    
	goto st17
	st17:
		if p++; p == pe {
			goto _test_eof17
		}
	st_case_17:
//line uri_parse.go:1123
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr29
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto tr29
			}
		default:
			goto tr29
		}
		goto st0
tr72:
//line uri_parse.rl:67

      uri.Host = string(buf[0:amt])
    
	goto st18
tr81:
//line uri_parse.rl:75

      b1 = string(buf[0:amt])
      amt = 0
    
//line uri_parse.rl:94

      if uri.Params == nil {
        uri.Params = Params{}
      }
      uri.Params[b1] = b2
    
	goto st18
tr86:
//line uri_parse.rl:80

      b2 = string(buf[0:amt])
      amt = 0
    
//line uri_parse.rl:94

      if uri.Params == nil {
        uri.Params = Params{}
      }
      uri.Params[b1] = b2
    
	goto st18
tr90:
//line uri_parse.rl:75

      b1 = string(buf[0:amt])
      amt = 0
    
//line uri_parse.rl:101

      if uri.Headers == nil {
        uri.Headers = URIHeaders{}
      }
      uri.Headers[b1] = b2
    
	goto st18
tr96:
//line uri_parse.rl:80

      b2 = string(buf[0:amt])
      amt = 0
    
//line uri_parse.rl:101

      if uri.Headers == nil {
        uri.Headers = URIHeaders{}
      }
      uri.Headers[b1] = b2
    
	goto st18
	st18:
		if p++; p == pe {
			goto _test_eof18
		}
	st_case_18:
//line uri_parse.go:1204
		switch data[p] {
		case 33:
			goto tr30
		case 36:
			goto tr30
		case 37:
			goto tr31
		case 63:
			goto tr30
		case 93:
			goto tr30
		case 95:
			goto tr30
		case 126:
			goto tr30
		}
		switch {
		case data[p] < 45:
			if 39 <= data[p] && data[p] <= 43 {
				goto tr30
			}
		case data[p] > 58:
			switch {
			case data[p] > 91:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr30
				}
			case data[p] >= 65:
				goto tr30
			}
		default:
			goto tr30
		}
		goto st0
tr88:
//line uri_parse.rl:40

      buf[amt] = data[p]
      amt++
    
	goto st49
tr33:
//line uri_parse.rl:49

      hex += unhex(data[p])
      buf[amt] = hex
      amt++
    
	goto st49
tr30:
//line uri_parse.rl:36

      amt = 0
    
//line uri_parse.rl:80

      b2 = string(buf[0:amt])
      amt = 0
    
//line uri_parse.rl:40

      buf[amt] = data[p]
      amt++
    
	goto st49
	st49:
		if p++; p == pe {
			goto _test_eof49
		}
	st_case_49:
//line uri_parse.go:1275
		switch data[p] {
		case 32:
			goto tr87
		case 33:
			goto tr88
		case 37:
			goto st19
		case 38:
			goto tr90
		case 61:
			goto tr91
		case 63:
			goto tr88
		case 93:
			goto tr88
		case 95:
			goto tr88
		case 126:
			goto tr88
		}
		switch {
		case data[p] < 45:
			switch {
			case data[p] > 13:
				if 36 <= data[p] && data[p] <= 43 {
					goto tr88
				}
			case data[p] >= 9:
				goto tr87
			}
		case data[p] > 58:
			switch {
			case data[p] > 91:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr88
				}
			case data[p] >= 65:
				goto tr88
			}
		default:
			goto tr88
		}
		goto st0
tr87:
//line uri_parse.rl:75

      b1 = string(buf[0:amt])
      amt = 0
    
//line uri_parse.rl:101

      if uri.Headers == nil {
        uri.Headers = URIHeaders{}
      }
      uri.Headers[b1] = b2
    
	goto st50
tr93:
//line uri_parse.rl:80

      b2 = string(buf[0:amt])
      amt = 0
    
//line uri_parse.rl:101

      if uri.Headers == nil {
        uri.Headers = URIHeaders{}
      }
      uri.Headers[b1] = b2
    
	goto st50
	st50:
		if p++; p == pe {
			goto _test_eof50
		}
	st_case_50:
//line uri_parse.go:1352
		if data[p] == 32 {
			goto st50
		}
		if 9 <= data[p] && data[p] <= 13 {
			goto st50
		}
		goto st0
tr31:
//line uri_parse.rl:36

      amt = 0
    
//line uri_parse.rl:80

      b2 = string(buf[0:amt])
      amt = 0
    
	goto st19
	st19:
		if p++; p == pe {
			goto _test_eof19
		}
	st_case_19:
//line uri_parse.go:1376
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr32
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto tr32
			}
		default:
			goto tr32
		}
		goto st0
tr32:
//line uri_parse.rl:45

      hex = unhex(data[p]) * 16
    
	goto st20
	st20:
		if p++; p == pe {
			goto _test_eof20
		}
	st_case_20:
//line uri_parse.go:1401
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr33
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto tr33
			}
		default:
			goto tr33
		}
		goto st0
tr91:
//line uri_parse.rl:75

      b1 = string(buf[0:amt])
      amt = 0
    
	goto st21
	st21:
		if p++; p == pe {
			goto _test_eof21
		}
	st_case_21:
//line uri_parse.go:1427
		switch data[p] {
		case 33:
			goto tr34
		case 36:
			goto tr34
		case 37:
			goto tr35
		case 63:
			goto tr34
		case 93:
			goto tr34
		case 95:
			goto tr34
		case 126:
			goto tr34
		}
		switch {
		case data[p] < 45:
			if 39 <= data[p] && data[p] <= 43 {
				goto tr34
			}
		case data[p] > 58:
			switch {
			case data[p] > 91:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr34
				}
			case data[p] >= 65:
				goto tr34
			}
		default:
			goto tr34
		}
		goto st0
tr34:
//line uri_parse.rl:36

      amt = 0
    
//line uri_parse.rl:40

      buf[amt] = data[p]
      amt++
    
	goto st51
tr94:
//line uri_parse.rl:40

      buf[amt] = data[p]
      amt++
    
	goto st51
tr37:
//line uri_parse.rl:49

      hex += unhex(data[p])
      buf[amt] = hex
      amt++
    
	goto st51
	st51:
		if p++; p == pe {
			goto _test_eof51
		}
	st_case_51:
//line uri_parse.go:1493
		switch data[p] {
		case 32:
			goto tr93
		case 33:
			goto tr94
		case 37:
			goto st22
		case 38:
			goto tr96
		case 63:
			goto tr94
		case 93:
			goto tr94
		case 95:
			goto tr94
		case 126:
			goto tr94
		}
		switch {
		case data[p] < 45:
			switch {
			case data[p] > 13:
				if 36 <= data[p] && data[p] <= 43 {
					goto tr94
				}
			case data[p] >= 9:
				goto tr93
			}
		case data[p] > 58:
			switch {
			case data[p] > 91:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr94
				}
			case data[p] >= 65:
				goto tr94
			}
		default:
			goto tr94
		}
		goto st0
tr35:
//line uri_parse.rl:36

      amt = 0
    
	goto st22
	st22:
		if p++; p == pe {
			goto _test_eof22
		}
	st_case_22:
//line uri_parse.go:1546
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr36
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto tr36
			}
		default:
			goto tr36
		}
		goto st0
tr36:
//line uri_parse.rl:45

      hex = unhex(data[p]) * 16
    
	goto st23
	st23:
		if p++; p == pe {
			goto _test_eof23
		}
	st_case_23:
//line uri_parse.go:1571
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr37
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto tr37
			}
		default:
			goto tr37
		}
		goto st0
tr70:
//line uri_parse.rl:67

      uri.Host = string(buf[0:amt])
    
	goto st24
	st24:
		if p++; p == pe {
			goto _test_eof24
		}
	st_case_24:
//line uri_parse.go:1596
		if 48 <= data[p] && data[p] <= 57 {
			goto tr38
		}
		goto st0
tr38:
//line uri_parse.rl:71

      uri.Port = uri.Port * 10 + uint16(data[p] - 0x30)
    
	goto st52
	st52:
		if p++; p == pe {
			goto _test_eof52
		}
	st_case_52:
//line uri_parse.go:1612
		switch data[p] {
		case 32:
			goto st46
		case 59:
			goto st12
		case 63:
			goto st18
		}
		switch {
		case data[p] > 13:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr38
			}
		case data[p] >= 9:
			goto st46
		}
		goto st0
	st25:
		if p++; p == pe {
			goto _test_eof25
		}
	st_case_25:
		if data[p] == 46 {
			goto tr39
		}
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 58 {
				goto tr39
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto tr39
			}
		default:
			goto tr39
		}
		goto st0
tr39:
//line uri_parse.rl:36

      amt = 0
    
//line uri_parse.rl:85
